# minesweeper-API

./: .env.example  .gitignore  Procfile  README.md  manage.py  package.json  pyproject.toml  requirements.txt
minesweeper_api/: settings.py  urls.py  wsgi.py
minesweeper_api_user/: apps.py
minesweeper_api_user/migrations/: 0001_initial.py
mineswepper_ui/: .env.example  .eslintrc.js  README.md  package.json  vue.config.js
mineswepper_ui/public/: index.html
mineswepper_ui/src/: App.vue  main.js
mineswepper_ui/src/components/: Cell.vue  EmailForm.vue  Game.vue  Games.vue  NewGameForm.vue  PlayerPanel.vue
ms_game/: admin.py  apps.py  authentication.py  authorization.py  models.py  serializers.py  tests.py  views.py
ms_game/migrations/: 0001_initial.py  0002_auto_20200722_1712.py
