[tool.poetry]
name = "minesweeper-api"
version = "0"
description = ""
authors = ["Federico Jaramillo Martinez <federicojaramillom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django_extensions = "^3.0.3"
psycopg2 = "^2.8.5"
django_heroku = "^0.3.1"
gunicorn = "^20.0.4"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.4.0"
drf-yasg = "^1.17.1"
django-sslserver = "^0.22"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
bpython = "^0.19"
dotenv-cli = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
